// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContent Default props and rendering - Component with white background verifies the snapshot for the component 1`] = `
<div
  aria-label="Test Title"
  className="ajc-flex-row ajc-flex-justify-center ajc-page-content-panel ajc-spacing-top-small ajc-spacing-bottom-small ajc-width-4k ajc-background-white"
  id="main-content"
  role="region"
>
  <a
    className="ajc-visibility-hidden"
    href="#main-content"
  >
    Skip to main content
  </a>
  <div
    className="ajc-flex-row ajc-flex-justify-center ajc-width-full-hd"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-width-hd"
    >
      <div
        className="ajc-flex-column ajc-width-hd-with-padding ajc-text-black ajc-font-default"
      >
        This is a test.
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContent Transferred props and rendering - Component with grey background verifies the snapshot for the component 1`] = `
<div
  aria-label="Test Title"
  className="ajc-flex-row ajc-flex-justify-center ajc-page-content-panel ajc-spacing-top-small ajc-spacing-bottom-small ajc-width-4k ajc-background-grey-1"
  id="main-content"
  role="region"
>
  <a
    className="ajc-visibility-hidden"
    href="#main-content"
  >
    Skip to main content
  </a>
  <div
    className="ajc-flex-row ajc-flex-justify-center ajc-width-full-hd"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-width-hd"
    >
      <div
        className="ajc-flex-column ajc-width-hd-with-padding ajc-text-black ajc-font-default"
      >
        This is a test.
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContent Transferred props and rendering - Component with transparent background verifies the snapshot for the component 1`] = `
<div
  aria-label="Test Title"
  className="ajc-flex-row ajc-flex-justify-center ajc-page-content-panel ajc-spacing-top-small ajc-spacing-bottom-small ajc-width-4k ajc-background-transparent"
  id="main-content"
  role="region"
>
  <a
    className="ajc-visibility-hidden"
    href="#main-content"
  >
    Skip to main content
  </a>
  <div
    className="ajc-flex-row ajc-flex-justify-center ajc-width-full-hd"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-width-hd"
    >
      <div
        className="ajc-flex-column ajc-width-hd-with-padding ajc-text-black ajc-font-default"
      >
        This is a test.
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContent Transferred props and rendering - Component with yellow background verifies the snapshot for the component 1`] = `
<div
  aria-label="Test Title"
  className="ajc-flex-row ajc-flex-justify-center ajc-page-content-panel ajc-spacing-top-small ajc-spacing-bottom-small ajc-width-4k ajc-background-yellow"
  id="main-content"
  role="region"
>
  <a
    className="ajc-visibility-hidden"
    href="#main-content"
  >
    Skip to main content
  </a>
  <div
    className="ajc-flex-row ajc-flex-justify-center ajc-width-full-hd"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-left ajc-width-hd"
    >
      <div
        className="ajc-flex-column ajc-width-hd-with-padding ajc-text-black ajc-font-default"
      >
        This is a test.
      </div>
    </div>
  </div>
</div>
`;
